--- a/admin/admin/src/index.css
+++ b/admin/admin/src/index.css
@@ -22,12 +22,17 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+body {
   display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+  flex-direction: column;
 }
 
 h1 {
@@ -35,7 +40,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button, input[type="submit"] {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -46,11 +51,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button:hover, input[type="submit"]:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+button:focus, input[type="submit"]:focus,
+button:focus-visible, input[type="submit"]:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
