--- a/frontend/blog-app/src/index.css
+++ b/frontend/blog-app/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #262626;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,14 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 html, body {
   margin: 0;
@@ -52,7 +52,7 @@ button, input[type="submit"] {
   transition: border-color 0.25s;
 }
 button:hover, input[type="submit"]:hover {
-  border-color: #646cff;
+  border-color: white;
 }
 button:focus, input[type="submit"]:focus,
 button:focus-visible, input[type="submit"]:focus-visible {
