--- a/frontend/blog-app/src/styles/Article.css
+++ b/frontend/blog-app/src/styles/Article.css
@@ -1,8 +1,8 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-.article{
+.article {
     display: flex;
     flex-direction: column;
 }
@@ -12,8 +12,45 @@
     padding: 0;
 }
 
-.article h1{
+.articleCover {
+    position: relative;
+    height: 500px; /* Adjust this value as needed */
+    background-size: cover;
+    background-position: center;
+}
+
+.articleCover::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to bottom, 
+        rgba(0,0,0,0.8) 0%,
+        rgba(0,0,0,0) 20%,
+        rgba(0,0,0,0) 80%,
+        rgba(0,0,0,0.8) 100%
+    );
+    pointer-events: none; /* This allows clicks to pass through to the underlying element */
+}
+
+.articleTitle {
+    position: absolute;
+    bottom: 20px; /* Adjust as needed */
+    left: 20px;
+    right: 20px;
+    color: white;
+    margin: 0;
     text-align: center;
+    z-index: 1; /* Ensures the title is above the gradient overlay */
+}
+
+.articleContainer {
+    display: flex;
+    flex-direction: row;
+    background-color: #141414;
+    border-top: 1px solid #262626;
 }
 
 .articleContainer{
