--- a/frontend/blog-app/src/styles/Article.css
+++ b/frontend/blog-app/src/styles/Article.css
@@ -5,6 +5,7 @@
 .article {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .article p {
@@ -63,9 +64,12 @@
 .articleContent{
     display: flex;
     flex: 7;
-    padding: 50px;
     border-right: 1px solid #262626;
+    flex-direction: column;
+}
 
+.articleBody{
+    padding: 30px 50px;
 }
 
 .articleInfo{
@@ -96,21 +100,57 @@
 
 .articleMetas{
     display: grid;
-    grid-template-columns: 200px 200px;
-    grid-row: auto auto;
+    grid-template-columns: 150px 150px;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-    padding: 30px 0 30px 50px;
+    padding: 30px 50px 30px 50px;
+    box-sizing: content-box;
+
 }
 
 .articleMeta{
     font-size: 18px;
+
 }
 
 .articleMetaTitle{
     color: #98989A;
+
 }
 
 .articleMetaData{
     color: white;
+
 }
+
+.articleDescription{
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #262626;
+
+    padding:30px 50px;
+}
+
+@media (max-width: 768px){
+    .articleContainer {
+        flex-direction: column;
+    }
+    .articleContent{
+        border-right:none;
+        border-bottom: 1px solid #262626;
+    }
+
+    .articleInfo{
+        padding:20px;
+    }
+
+    .articleStats{
+        padding:20px 0;
+        justify-content: center;
+    }
+    .articleMeta{
+        grid-template-columns: 1fr;
+        padding:20px 0;
+    }
+}
+
