--- a/frontend/blog-app/src/styles/HomePage.css
+++ b/frontend/blog-app/src/styles/HomePage.css
@@ -44,6 +44,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    gap:5px;
   }
   .featuredArticleCard p{
     margin: 0;
@@ -55,6 +56,7 @@
 
   .featuredArticleCard .readMoreButton{
     align-self: center;
+
   }
   
   .featuredArticleCard img {
@@ -110,4 +112,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+@media (max-width: 768px){
+  .latestArticle{
+    display: flex;
+    flex-direction: column;
+  }
+  .latestArticle .readMoreButton{
+    align-self: center;
+  }
+
+  .featuredArticleCards{
+    display: flex;
+    flex-direction: column;
+  }
 }
